# csv-plotter-app

./: .gitignore  README.md  installer.bat  pyproject.toml
.github/workflows/: python-package.yml
csv_plotter_app/: main.py
